--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "mcsUser": "nodemon src/mcs/mcs-users/server.js",
+    "mcsShoes": "nodemon src/mcs/mcsShoes/server.js",
+    "mcsCart": "nodemon src/mcs/mcs-cart/server.js",
+    "mcsSale": "nodemon src/mcs/mcs-sales/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-
+    "@grpc/grpc-js": "^1.9.5",
+    "@grpc/proto-loader": "^0.7.10",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
@@ -22,7 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "redis": "^4.6.10"
-
   }
 }
