--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "slugify": "^1.6.6"
   }
 }
