interceptor used and a little concept of metadata for token is used

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 
 PORT = 3000
-CARTPORT = 3005
+USERPORT = 3001
+SHOESPORT = 3002
+SALESPORT = 3003
+CARTPORT = 3004
 GRPC_HOST = '127.0.0.1'
+JWT_SECRET = asdfghjkl
+JWT_EXPIRE = 1d
