--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "grpc-create-metadata": "^4.0.1",
+    "grpcjs-interceptors": "github:mfecteau34/node-grpc-interceptors",
     "http-status": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
